[gd_scene format=3 uid="uid://cbm0gmpdvrfqb"]

[ext_resource type="Script" uid="uid://chtj7wr0tnjmg" path="res://game/Game.gd" id="1"]
[ext_resource type="Script" uid="uid://ggjivbgubqt1" path="res://shared/net/NetAvatarManager.gd" id="2_qdja7"]

[node name="Game" type="Control" unique_id=949900691]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="." unique_id=1195275201]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98

[node name="VBox" type="VBoxContainer" parent="Panel" unique_id=1224539017]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="Panel/VBox" unique_id=1200774889]
layout_mode = 2
text = "World: (none)"

[node name="Output" type="RichTextLabel" parent="Panel/VBox" unique_id=1633824898]
custom_minimum_size = Vector2(0, 380)
layout_mode = 2
size_flags_vertical = 3
scroll_following = true

[node name="Row" type="HBoxContainer" parent="Panel/VBox" unique_id=1630416057]
layout_mode = 2
size_flags_horizontal = 3

[node name="CommandInput" type="LineEdit" parent="Panel/VBox/Row" unique_id=1732325002]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type /help then Enter"

[node name="RunButton" type="Button" parent="Panel/VBox/Row" unique_id=592549593]
layout_mode = 2
text = "Run"

[node name="SaveButton" type="Button" parent="Panel/VBox/Row" unique_id=1195006194]
layout_mode = 2
text = "Save"

[node name="ExitButton" type="Button" parent="Panel/VBox/Row" unique_id=692458678]
layout_mode = 2
text = "Exit"

[node name="NetAvatarManager" type="Node3D" parent="." unique_id=704379120]
script = ExtResource("2_qdja7")
